@@ -22,15 +22,15 @@
             "rct2.scenery_small.tac",
             "fidwell.scenery_small.tac",
             "rct2.scenery_small.tghc2",
-            "$DAT:00000002|GWTRHT  ",
+            "fidwell.scenery_small.tghc2",
             "rct2.scenery_small.tcj",
             "fidwell.scenery_small.tcj",
             "rct2.scenery_small.tmbj",
             "fidwell.scenery_small.tmbj",
             "rct2.scenery_small.tcf",
-            "$DAT:00000002|GWTRCF  ",
+            "fidwell.scenery_small.tcf",
             "rct2.scenery_small.tcl",
-            "$DAT:00000002|GWTRCL  ",
+            "fidwell.scenery_small.tcl",
             "rct2.scenery_small.trf",
             "$DAT:00000002|GWTRRF  ",
             "rct2.scenery_small.trf2",
