@@ -1,0 +1,46 @@
+{
+    "id": "fidwell.scenery_small.tcf",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRCF  |CFA1C099",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 23,
+        "removalPrice": 15,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 120,
+        "isTree": true,
+        "shape": "4/4",
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "./objects/temp/0.png", "x": -25, "y": -122 },
+      { "path": "./objects/temp/1.png", "x": -25, "y": -122 },
+      { "path": "./objects/temp/2.png", "x": -25, "y": -122 },
+      { "path": "./objects/temp/3.png", "x": -25, "y": -118 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Caucasian Fir Tree",
+            "fr-FR": "Sapin du Caucase",
+            "de-DE": "Kaukasische Tanne",
+            "es-ES": "Abeto caucásico",
+            "it-IT": "Abete caucasico",
+            "nl-NL": "Kaukasische spar",
+            "sv-SE": "Kaukasisk tall",
+            "ko-KR": "코카시안 전나무",
+            "zh-CN": "高加索冷杉树",
+            "zh-TW": "高加索冷杉樹",
+            "pt-BR": "Árvore Abeto-Caucasiano",
+            "cs-CZ": "Jedle",
+            "ja-JP": "カフカスモミの木",
+            "pl-PL": "Kaukaska jodła",
+            "ru-RU": "Кавказская ель",
+            "eo-ZZ": "Kaŭkaza Abioarbo",
+            "ca-ES": "Avet caucàsic",
+            "fi-FI": "Kaukasianpihta"
+        }
+    }
+}
