@@ -1,0 +1,47 @@
+{
+    "id": "fidwell.scenery_small.tcl",
+    "authors": ["Chris Sawyer", "Simon Foster"],
+    "version": "1.0",
+    "originalId": "00000002|GWTRCL  |24ECA42E",
+    "sourceGame": ["custom"],
+    "objectType": "scenery_small",
+    "properties": {
+        "price": 38,
+        "removalPrice": 17,
+        "cursor": "CURSOR_TREE_DOWN",
+        "height": 164,
+        "isTree": true,
+        "shape": "4/4",
+        "requiresFlatSurface": true,
+        "hasPrimaryColour": true,
+        "hasSecondaryColour": true
+    },
+    "images": [
+      { "path": "./objects/temp/0.png", "x": -32, "y": -167 },
+      { "path": "./objects/temp/1.png", "x": -32, "y": -167 },
+      { "path": "./objects/temp/2.png", "x": -32, "y": -167 },
+      { "path": "./objects/temp/3.png", "x": -32, "y": -167 }
+    ],
+    "strings": {
+        "name": {
+            "en-GB": "Cedar of Lebanon Tree",
+            "fr-FR": "Cèdre du Liban",
+            "de-DE": "Libanonzeder",
+            "es-ES": "Cedro del Líbano",
+            "it-IT": "Cedro libanese",
+            "nl-NL": "Libanese ceder",
+            "sv-SE": "Libanesisk ceder",
+            "ko-KR": "레바논삼목",
+            "zh-CN": "黎巴嫩西洋杉",
+            "zh-TW": "黎巴嫩西洋杉",
+            "pt-BR": "Árvore Cedro-do-Líbano",
+            "cs-CZ": "Libanonský cedr",
+            "ja-JP": "レバノン杉",
+            "pl-PL": "Cedr libański",
+            "ru-RU": "Ливанский кедр",
+            "eo-ZZ": "Lebanona Cedroarbo",
+            "ca-ES": "Cedre del Líban",
+            "fi-FI": "Libanoninsetri"
+        }
+    }
+}
