@@ -20,6 +20,7 @@
 - Fixed object: Italian Cypress Tree (rct2.scenery_small.titc)
 - Fixed object: Golden Hinoki Cypress Tree (rct2.scenery_small.tghc)
 - Fixed object: Meyer's Blue Juniper Tree (rct2.scenery_small.tmbj)
+- Fixed object: Cedar of Lebanon Tree (rct2.scenery_small.tcl)
 - Fixed object: Bush (rct2.scenery_small.tsh0)
 - Fixed object: Roman Column Wall (rct2.scenery_wall.wc3)
 - Fixed object: Egyptian Statue (rct2.scenery_small.tes1)
@@ -27,7 +28,9 @@
 - Fixed object: Barrel (fidwell.scenery_small.tbr3)
 - Fixed object: Barrel (fidwell.scenery_small.tbr4)
 - Fixed object: Sandstone Skyscraper Walkway (rct2tt.scenery_small.futsky01)
+- Updated object: Hiba Tree (rct2.scenery_small.tghc2)
 - Updated object: Common Juniper Tree (rct2.scenery_small.tcj)
+- Updated object: Caucasian Fir Tree (rct2.scenery_small.tcf)
 - Updated object: Giraffe Statue (rct2.scenery_small.tgs)
 - Updated object: Roman Colosseum (rct2.scenery_large.scol)
 - Updated object: Roman Column (rct2.scenery_small.trc)
